--- a/tensorboard/components/tf_dashboard_common/tensorboard-color.html
+++ b/tensorboard/components/tf_dashboard_common/tensorboard-color.html
@@ -20,9 +20,9 @@ limitations under the License.
 <style is="custom-style">
 
   :root {
-    --tb-orange-weak: #ffa726;
-    --tb-orange-strong: #f57c00;
-    --tb-orange-dark: #dc7320;
+    --tb-orange-weak: #444444;
+    --tb-orange-strong: #222222;
+    --tb-orange-dark: #000000;
     --tb-grey-darker: #e2e2e2;
     --tb-grey-lighter: #f3f3f3;
     --tb-ui-dark-accent: #757575;
